<resources>
    <string name="app_name">PocketLibrary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_catalog">Catalog</string>
    <string name="menu_publishers">Publishers</string>
    <string name="menu_books">My books</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_credits">Credits</string>
    <string name="text_placeholder">TextView</string>

    <!--  Welcome fragment strings  -->
    <string name="welcome">Welcome!</string>
    <string name="logo_content">The Pocket Library Logo</string>
    <string name="welcome_desc">Pocket Library is a virtual library containing thousands of books ranging through
        different genres for all ages. From children stories to autobiographies, explore the world of knowledge and
        imagination — found within your pocket.
    </string>
    <string name="cover_desc">book cover image</string>

    <!--  Publisher fragment strings  -->
    <string name="button">Visit Website</string>
    <string name="img_desc">publisher company image</string>

    <!--  Catalog fragment strings  -->
    <string name="ratings">No Ratings</string>
    <string name="borrow">Borrow</string>


    <!--  Credits fragment strings  -->
    <string name="information">Wikipedia.org</string>
    <string name="images1">Color Scheme and Logo</string>
    <string name="images2">Coolors.co</string>
    <string name="images3">Canva.com</string>

    <string name="images4">Publisher Logos</string>
    <string name="images5">https://thebookactivist.files.wordpress.com/2017/04/scholastic-logo-b316f651.png </string>
    <string name="images6">https://thebookactivist.files.wordpress.com/2017/04/scholastic-logo-b316f651.png </string>
    <string name="images7">https://thebookactivist.files.wordpress.com/2017/04/scholastic-logo-b316f651.png </string>
    <string name="images8">https://thebookactivist.files.wordpress.com/2017/04/scholastic-logo-b316f651.png </string>


</resources>