<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_catalog" />
        <item
            android:id="@+id/nav_publishers"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/menu_publishers" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_books" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_welcome"
                    android:icon="@drawable/ic_baseline_happy"
                    android:title="@string/menu_welcome" />

                <item
                    android:id="@+id/nav_credits"
                    android:icon="@drawable/ic_baseline_copyright_24"
                    android:title="@string/menu_credits" />
            </group>
        </menu>
    </item>

</menu>